--- a/alembic.ini
+++ b/alembic.ini
@@ -4,7 +4,7 @@
 # path to migration scripts
 script_location = alembic
 
-include_schemas = src
+include_schemas = /src
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
 # Uncomment the line below if you want the files to be prepended with date and time
